Added score, and automatically adds new users to score sheet

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .dieImg {
     height: 20px;
 }
+table {
+	display: table;
+}
+table tr {
+	display: table-cell;
+}
+table tr td {
+	display: block;
+}
