--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,9 @@ html,body, #root{
     border-color: #9ecaed;
     box-shadow: 0px 0px 20px 10px #9ecaed;
 }
+.dieContainer {
+	
+}
 .clickable {
 	cursor: pointer;
 	background-color: #f2ecf2;
@@ -63,4 +66,8 @@ table thead {
 }
 table tr td {
 	display: block;
+}
+
+.hidden {
+	display: none;
 }
